# aiotruenas

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROMPT.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml  codeql.yml  conflicts.yml  pypi.yaml  stale.yml
examples/: verify_live.py
src/aiotruenas/: __init__.py  _errors.py  client.py  exceptions.py
tests/: fake_server.py  test_client.py  test_errors.py
